# ops-tensor

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  QUICKSTART.md  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  build.sh  classify_rule.yaml  install_deps.sh  requirements.txt  version.cmake  version.info
cmake/: func.cmake  init_env.cmake  makeself_built_in.cmake  package.cmake  run_package.cmake  variables.cmake
docs/: README.md  implementation.md
docs/zh/: op_list.md
docs/zh/context/: build.md  dir_structure.md  quick_install.md
docs/zh/debug/: op_debug_prof.md
docs/zh/develop/: operator_development_guide.md  test_writing_guide.md
docs/zh/invocation/: quick_op_invocation.md
include/: cann_ops_tensor.h  cann_ops_tensor_types.h
include/blaze/: README.md
include/blaze/block/: block_mmad.h  block_mmad_mx.h  block_mmad_streamk.h  block_scheduler_qbmm.h  block_scheduler_streamk.h
include/blaze/epilogue/: block_epilogue_empty.h  block_epilogue_streamk.h
include/blaze/epilogue/fusion/: default_fusion_op.h
include/blaze/kernel/: kernel_matmul_streamk.h  kernel_qbmm_mx.h
include/blaze/policy/: dispatch_policy.h
include/blaze/tile/: copy_scale_l1_to_l0a.h  copy_scale_l1_to_l0b.h  pad_mx_kl1.h  tile_mmad_mx.h
include/blaze/utils/: common_utils.h  layout_utils.h  quant_batch_matmul_constant.h
include/cmct/block/: block_mmad_mx.h  block_mmad_mx_full_load_A.h  block_scheduler_policy.h  block_scheduler_qbmm.h
include/cmct/kernel/: kernel_qbmm_mx_demo.h
include/cmct/tile/: copy_scale_gm_to_l1.h  copy_scale_l1_to_l0a.h  copy_scale_l1_to_l0b.h  pad_mx_kl1.h  tile_mmad_mx.h
include/cmct/utils/: quant_batch_matmul_constant.h
include/tensor_api/impl/experimental/tensor_api/algorithm/: copy_impl.h  gemm_impl.h  mad_impl.h
include/tensor_api/impl/experimental/tensor_api/atom/: copy_atom_impl.h  copy_traits_impl.h  mad_atom_impl.h  mad_traits_impl.h
include/tensor_api/impl/experimental/tensor_api/tensor/: coord_index.h  engine_impl.h  layout_definition.h  layout_dispatch.h  layout_fractal.h  layout_impl.h  layout_method.h  layout_size.h  layout_static_fractal.h  layout_struct.h  local_tensor_impl.h  pointer_adaptor_impl.h  pointer_impl.h  pointer_mem_impl.h  tuple_fractal.h  tuple_impl.h
include/tensor_api/impl/experimental/tensor_api/utils/: constant_impl.h  extra_impl.h  macro_impl.h  utils_impl.h
include/tensor_api/impl/tensor_api/algorithm/: copy_impl.h  mmad_impl.h
include/tensor_api/impl/tensor_api/arch/utils/: arch_utils.h  check_data_type_3510.h  check_format.h  is_format.h
include/tensor_api/impl/tensor_api/atom/: copy_atom_impl.h  copy_traits_impl.h  mmad_atom_impl.h  mmad_traits_impl.h
include/tensor_api/impl/tensor_api/atom/compute/: mmad.h
include/tensor_api/impl/tensor_api/atom/datamove/: copy_gm2l1.h  copy_gm2ub.h  copy_l0c2gm.h  copy_l0c2ub.h  copy_l12bt.h  copy_l12fb.h  copy_l12l0a.h  copy_l12l0b.h  copy_l12ub.h  copy_ub2gm.h  copy_ub2l1.h
include/tensor_api/impl/tensor_api/tensor/: coord_index.h  engine_impl.h  layout_definition.h  layout_dispatch.h  layout_fractal.h  layout_frame.h  layout_impl.h  layout_method.h  layout_pattern.h  layout_size.h  local_tensor_impl.h  pointer_adaptor_impl.h  pointer_mem_impl.h  pointer_pattern.h  pointer_pattern_impl.h  tuple_impl.h
include/tensor_api/impl/tensor_api/utils/: constant_impl.h  extra_impl.h  macro_impl.h  map_impl.h  utils_impl.h
include/tensor_api/include/experimental/tensor_api/: tensor.h
include/tensor_api/include/experimental/tensor_api/algorithm/: algorithm.h  copy.h  gemm.h  mad.h
include/tensor_api/include/experimental/tensor_api/arch/: arch.h  trait_struct.h
include/tensor_api/include/experimental/tensor_api/atom/: atom.h
include/tensor_api/include/experimental/tensor_api/tensor/: layout.h  layout_struct.h  local_tensor.h  pointer.h
include/tensor_api/include/experimental/tensor_api/utils/: utils.h
include/tensor_api/include/tensor_api/: tensor.h
include/tensor_api/include/tensor_api/algorithm/: copy.h  mmad.h
include/tensor_api/include/tensor_api/arch/: arch.h
include/tensor_api/include/tensor_api/atom/: atom.h
include/tensor_api/include/tensor_api/tensor/: layout.h  local_tensor.h  pointer.h
include/tensor_api/include/tensor_api/utils/: utils.h
lib/: CMakeLists.txt
lib/core/: handle.cpp  handle.hpp  internal_types.hpp  operation_descriptor.cpp  operation_descriptor.hpp  plan.cpp  plan.hpp  plan_preference.cpp  plan_preference.hpp  tensor_descriptor.cpp  tensor_descriptor.hpp
lib/elementwise/: elementwise.cpp  elementwise.hpp  elementwise_binary.cpp  elementwise_binary.hpp
lib/utils/: type_utils.hpp  utils.cpp  validation.cpp  validation.hpp
scripts/: check_build.sh  check_build_dependencies.py  generate_version_info.py  run_examples.sh
scripts/package/: package.py
scripts/package/common/: __init__.py
scripts/package/common/py/: filelist.py  merge_binary_info_config.py  packer.py  pkg_parser.py  version_info.py
scripts/package/common/py/utils/: comm_log.py  funcbase.py  pkg_utils.py
scripts/package/common/sh/: check_version_required.awk  cleanup.sh  common_func.inc  common_func_v2.inc  common_installer.inc  common_interface.bash  common_interface.csh  common_interface.fish  install_common_parser.sh  multi_version.inc  script_operator.inc  version_cfg.inc  version_compatiable.inc
scripts/package/latest_manager/scripts/: install.sh  manager.sh  manager_func.sh  uninstall.sh
scripts/package/module/ascend/: OpsTensor.xml  OpsTensorInc.xml
scripts/package/ops_tensor/: ops_tensor.xml
scripts/package/ops_tensor/scripts/: help.info  install.sh  opp_common.sh  opp_install.sh  opp_uninstall.sh  uninstall.sh  ver_check.sh
src/: CMakeLists.txt
src/add/: CMakeLists.txt  add_host.cpp  add_kernel.cpp  add_solution.cpp
src/add/arch35/: add_struct.h
src/add/tests/: add_test.cpp  add_test.h
src/common/tests/: test_common.cpp
tests/: CMakeLists.txt  all_tests.cpp.in  test_common.cpp  test_common.h  test_elementwise.cpp
(+148 files in other folders)
